k8s/app_manifest/app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo_app
  name: todo_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo_app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: todo_app
    spec:
      containers:
      - image: yp3yp3/to_do_list
        name: to-do-list-dltxt
        resources: {}
status: {}
