k8s/app_manifest/app_stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo_app_stage
  name: todo_app_stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo_app_stage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: todo_app_stage
    spec:
      containers:
      - image: yp3yp3/to_do_list:1
        name: to-do-list-stage
        resources: {}
status: {}
