k8s/app_manifest/app_stage_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todo_app_stage
  name: todo_stage_svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: todo_app_stage
  type: clusterIp
status:
  loadBalancer: {}
