k8s/app_manifest/app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: pvc-mysql
      containers:
      - image: mysql:8.0
        name: mysql
        resources: {}
        volumeMounts:
         - name: mysql-pvc
           mountPath: /var/lib/mysql
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql-svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo-app
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: todo-app
    spec:
      containers:
      - image: yp3yp3/to_do_list
        name: to-do-list-dltxt
        resources:
          requests:
            cpu: 500m
          limits:
            cpu: 1000m
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todo-app
  name: todo-svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: todo-app
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo-app-stage
  name: todo-app-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-stage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: todo-app-stage
    spec:
      containers:
      - image: yp3yp3/to_do_list:2
        name: to-do-list-stage
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: todo-app-stage
  name: todo-stage-svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: todo-app-stage
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: todo
spec:
  ingressClassName: nginx
  rules:
  - host: todo.yp3yp3.site
    http:
      paths:
      - backend:
          service:
            name: todo-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: todo-stage-svc
            port:
              number: 5000
        path: /stage
        pathType: Prefix
  - host: stage.todo.yp3yp3.site
    http:
      paths:
      - backend:
          service:
            name: todo-stage-svc
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
